@@ -4,6 +4,7 @@
 	* Indexing configuration records now can exist only on regular pages
 	* Fix: htdb:/ records did not show full URL in search results in certain cases
 	* Added feature to limit search on htdb:/ domains
+	* Fixed problem: TYPO3SEARCH_xxx was not working
 
 09-10-2008	Dmitry Dulepov	<dmitry@typo3.org>
 
